# polars-decimal-bug

./: .gitignore  README.md  docker-compose.yml  generate_parquet.py  init.sql  main.py  pyproject.toml  reproduce_bug.py  test_with_adbc_direct.py  test_with_sqlalchemy.py
