[project]
name = "polars-decimal-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql==1.8.0",
    "pandas>=2.3.2",
    "polars==1.34.0b1",
    "pyarrow>=15.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
